# fastapi-starter

./: README.md
.github/workflows/: deploy-demo.yml
{{cookiecutter.project_slug}}/: docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_slug}}/backend/: Dockerfile  main.py  pyproject.toml  shell.py
{{cookiecutter.project_slug}}/backend/alembic/: env.py
{{cookiecutter.project_slug}}/backend/src/: config.py  database.py  dependencies.py  factory.py  logger.py  models.py  routers.py
{{cookiecutter.project_slug}}/backend/src/auth/: constants.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
{{cookiecutter.project_slug}}/docker/: .env.dev  Dockerfile  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  env-template
